--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "export": "next export"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "next": "9.2.2",
-    "react": "16.13.0",
+    "react": "^16.13.0",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "16.13.0"
+  },
+  "devDependencies": {
+    "@types/node": "^13.9.0",
+    "@types/react": "^16.9.23",
+    "typescript": "^3.8.3"
   }
 }
